1.5.5:
    Fixed #1918 - facter --puppet doesn't work

    Fixed #2011 - virtual fact reports always vserver_host if /proc/virtual

    Fixed #2021 - Returning boolean not always possible

    Fixed #2132 - Support for named interfaces under Linux

    Fixed #2080 - IPAddress resolutions should be reordered

    Fixed #2078 - ip.rb errors command not found

    Fixed #2058 - Redirecting stderr doesn't work on all systems

    Fixed #2081 - Fixed interfaces fact for vlan subinterfaces

    Fixed #2063 - added kernelmajversion fact

    Fixed #2055 - SunoS Interface error

    Fixed #2044 - fixed virtual fact

    Fixed lib install permissions

    Fixed #2040 - Facter should provide a macosx_productversion_major fact

    Fixed #2003 - Added is_virtual fact

    Fixed #2035 - Missing brace for OSX preflight
 
    Added EC2 facts
  
    Fixed #2032 - file.open hanging on /proc/uptime on some platform
 
1.5.4:
    Fixed #1966 - Added physicalprocessorcount fact

    Fixed #1761 - changes to Solaris facts:
       operatingsystemrelease == kernel release or uname -r
       kernelrelease == uname -r
       kernelversion == uname -v

    Added support for Oracle VM Server to operatingsystem
    and operatingsystemrelease

    Added support for Oracle Enterprise Linux to operatingsystem
    and operatingsystemrelease

    Fixed #1927 - failing facts don't kill Facter

    Fixed #1850 - Facter updates for Ruby 1.9

    Fixed #1926 - IPAddr to_s issue

    Fixed Ubuntu operatingsystem identification

    Fixed generic uptime fact

    Fixed #1924 - Fixed lo / lo:0 local interface matching
1.5.3:
    Added network fact

    Fixed #1870 - Format all subnet masks as human-readable

    Added uptime facts

    Fixed autotest on win32

    Fixed #1870 - Added interface support for Darwin

    Fixed #1791 - support for virtual fact on Solaris 10

    Fixed #1793 - Added more Solaris 10 facts

    Fixed errors on unrecognised option in binary

    Added ci namespace and Rake tasks
